policies/tests/disallow-privileged-containers/resource-pass.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: non-privileged-pod
  namespace: tenant-alpha
spec:
  containers:
    - name: app
      image: "harbor.sre.internal/alpha/my-app:v1.0.0"
      securityContext:
        privileged: false
