policies/tests/disallow-privileged-containers/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-privileged-containers-test
policies:
  - policy.yaml
resources:
  - resource-pass.yaml
  - resource-fail.yaml
results:
  - policy: disallow-privileged-containers
    rule: deny-privileged-containers
    resource: non-privileged-pod
    kind: Pod
    result: pass
  - policy: disallow-privileged-containers
    rule: deny-privileged-containers
    resource: privileged-pod
    kind: Pod
    result: fail
